force-app/main/default/objects/Table_Matrix_Job__c/Table_Matrix_Job__c.object-meta.xml
<CustomObject>
    <label>Table Matrix Job</label>
    <nameField>
        <displayFormat>TMJ-{00000}</displayFormat>
        <label>Matrix Job Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Table Matrix Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>