force-app/main/default/objects/Table_Matrix_Job__c/fields/Cell_Count__c.field-meta.xml
<CustomField>
    <fullName>Cell_Count__c</fullName>
    <label>Cell Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>