force-app/main/default/objects/Table_Matrix_Job__c/fields/Config_Hash__c.field-meta.xml
<CustomField>
    <fullName>Config_Hash__c</fullName>
    <externalId>true</externalId>
    <label>Config Hash</label>
    <length>64</length>
    <type>Text</type>
</CustomField>