force-app/main/default/objects/Table_Matrix_Job__c/fields/Grouped_Row_Count__c.field-meta.xml
<CustomField>
    <fullName>Grouped_Row_Count__c</fullName>
    <label>Grouped Row Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>