force-app/main/default/objects/Table_Matrix_Job__c/fields/Normalized_Request_JSON__c.field-meta.xml
<CustomField>
    <fullName>Normalized_Request_JSON__c</fullName>
    <label>Normalized Request JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>