force-app/main/default/objects/Table_Matrix_Job__c/fields/Progress_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Progress_Percentage__c</fullName>
    <label>Progress Percentage</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>