force-app/main/default/objects/Table_Matrix_Job__c/fields/Request_Version__c.field-meta.xml
<CustomField>
    <fullName>Request_Version__c</fullName>
    <label>Request Version</label>
    <length>40</length>
    <type>Text</type>
</CustomField>