force-app/main/default/objects/Table_Matrix_Job__c/fields/Table__c.field-meta.xml
<CustomField>
    <fullName>Table__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Table</label>
    <referenceTo>Table__c</referenceTo>
    <relationshipLabel>Matrix Jobs</relationshipLabel>
    <relationshipName>Matrix_Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>