force-app/main/default/objects/Table_Matrix_Job__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Table Matrix Jobs</relationshipLabel>
    <relationshipName>Table_Matrix_Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>